@@ -127,7 +127,7 @@ $.Viewport = function( options ) {
         animationTime:   this.animationTime
     });
     this.zoomSpring    = new $.Spring({
-        log: true,
+        exponential: true,
         initial: 1,
         springStiffness: this.springStiffness,
         animationTime:   this.animationTime
